<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent2"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="235dp"
        android:layout_height="197dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintCircleRadius="50dp"
        android:contentDescription="@string/avatar_food"
        app:layout_constraintBottom_toTopOf="@+id/myMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/grocery_list_foreground"

        tools:srcCompat="@mipmap/grocery_list_foreground" />

    <EditText
        android:id="@+id/myMsg"
        android:layout_width="286dp"
        android:layout_height="59dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="319dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_message_here"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/addBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/viewListBtn"
        android:layout_width="115dp"
        android:layout_height="86dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape"
        android:text="@string/view_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="85dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape"
        android:text="@string/buttonAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />

    <Button
        android:id="@+id/shareBtn"
        android:layout_width="85dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape"
        android:text="@string/buttonShare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />
</androidx.constraintlayout.widget.ConstraintLayout>